# termulator_py

./: .gitignore  README.md  pyproject.toml  run.sh
src/terms/: operators.py
termulator_py/: term_handler.py  termulator.py  util.py
termulator_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
termulator_py/parsing/: __init__.py  syntax.py  tokens.py
termulator_py/terms/: __init__.py  operators.py  values.py
