[tool.poetry]
name = "termulator_py"
version = "0.1.0"
description = "Simple program to manipulate mathematical terms"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
